--- a/atlas/Cargo.toml
+++ b/atlas/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 nalgebra = "0.33.0"
 num-traits = "0.2.19"
-atlas_derive = {path = "../atlas_derive"}
+atlas-derives = {path = "../atlas-derives"}
